// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  <a
    className="sc-bdVaJa RfHPw"
    href="#main-content"
    onClick={[Function]}
    tabIndex={1}
  >
    Skip to Content
  </a>,
  <div
    className="sc-htoDjs bDwnUM"
  >
    <div
      className="sc-ifAKCX gjNQMo"
      open={true}
    >
      <div
        className="sc-bZQynM fxfzvu"
        open={true}
      >
        <button
          aria-label="Click to close the Table of Contents"
          className="sc-EHOje lewrCf"
          onClick={[Function]}
          role="button"
        >
          <span />
          <span />
          <span />
        </button>
        <nav>
          <ol>
            <li
              className="sc-gzVnrw gdejwh"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="sc-gzVnrw gdejwh"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "page title",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="sc-gzVnrw gdejwh"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "page title2",
                          }
                        }
                        href="/books/book/pages/page2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="sc-bwzfXH hsQBVX"
      id="main-content"
      tabIndex={-1}
    >
      <div>
        <h1
          className="sc-htpNat cOGKiz"
        >
          book title
           / 
          page title
        </h1>
      </div>
      <div
        className="sc-bxivhb fpcskD"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "some page content yo",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  <a
    className="sc-bdVaJa RfHPw"
    href="#main-content"
    onClick={[Function]}
    tabIndex={1}
  >
    Skip to Content
  </a>,
  <div
    className="sc-htoDjs bDwnUM"
  >
    <div
      className="sc-ifAKCX gjNQMo"
      open={true}
    >
      <div
        className="sc-bZQynM fxfzvu"
        open={true}
      >
        <button
          aria-label="Click to close the Table of Contents"
          className="sc-EHOje lewrCf"
          onClick={[Function]}
          role="button"
        >
          <span />
          <span />
          <span />
        </button>
        <nav>
          <ol>
            <li
              className="sc-gzVnrw gdejwh"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="sc-bwzfXH hsQBVX"
      id="main-content"
      tabIndex={-1}
    >
      <div />
      <div
        className="sc-bxivhb fpcskD"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
